--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<html><body><h1>Hello!</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://kit.fontawesome.com/8451689280.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <nav class="navbar">
+        <div class="navbar__logo">
+            <i class="fab fa-html5"></i>
+            <a href="/index.html">WebSite</a>
+        </div>
+
+        <ul class="navbar__menu">
+            <li><a href="">Menu1</a></li>
+            <li><a href="">Menu2</a></li>
+            <li><a href="">Menu3</a></li>
+            <li><a href="">Menu4</a></li>
+            <li><a href="">Menu5</a></li>
+        </ul>
+
+        <ul class="navbar__links">
+           <li><a href="signin.html">로그인</a></li>
+           <li><a href="">회원가입</a></li> 
+        </ul>
+    </nav>
+
+</body>
+</html>
