--- a/signin.html
+++ b/signin.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/signin.css">
+    <link rel="stylesheet" href="css/signin.css">
+    <script src="https://kit.fontawesome.com/8451689280.js" crossorigin="anonymous"></script>
     <title>Sign In</title>
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="navbar__logo">
+            <i class="fab fa-html5"></i>
+            <a href="/index.html">WebSite</a>
+        </div>
+
+        <ul class="navbar__menu">
+            <li><a href="">Menu1</a></li>
+            <li><a href="">Menu2</a></li>
+            <li><a href="">Menu3</a></li>
+            <li><a href="">Menu4</a></li>
+            <li><a href="">Menu5</a></li>
+        </ul>
+
+        <ul class="navbar__links">
+           <li><a href="signin.html">로그인</a></li>
+           <li><a href="">회원가입</a></li> 
+        </ul>
+    </nav>
+
     <div class="sign-in">
         <header class="header"><h1>Sign In</h1></header>
         <form class="form">
@@ -17,7 +39,7 @@
             <span class="form__forgot">Forgot Password?</span>
             <button class="form__button">Sign In</button>
             <div class="form__sign-up">
-                <span>아직 계정이 없으신가요?</span><a href="">Sign Up</a>
+                <span>아직 계정이 없으신가요?</span><a href="">Sign up</a>
             </div>
         </form>
     </div>
