--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/8451689280.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <!-- 메뉴바 -->
     <nav class="navbar">
         <div class="navbar__logo">
             <i class="fab fa-html5"></i>
@@ -23,10 +26,11 @@
         </ul>
 
         <ul class="navbar__links">
-           <li><a href="signin.html">로그인</a></li>
-           <li><a href="">회원가입</a></li> 
+            <li><a href="signin.html">로그인</a></li>
+            <li><a href="signup.html">회원가입</a></li>
         </ul>
     </nav>
 
 </body>
+
 </html>
