Add general_board layout

--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
         </div>
 
         <ul class="navbar__menu">
-            <li><a href="">Menu1</a></li>
+            <li><a href="board.php">자유게시판</a></li>
             <li><a href="">Menu2</a></li>
             <li><a href="">Menu3</a></li>
             <li><a href="">Menu4</a></li>
-            <li><a href="">Menu5</a></li>
         </ul>
 
         <ul class="navbar__links">
-            <li><a href="signin.html">로그인</a></li>
-            <li><a href="signup.html">회원가입</a></li>
+            <li><a href="signin.php">로그인</a></li>
+            <li><a href="signup.php">회원가입</a></li>
         </ul>
     </nav>
 
