오픈채팅방 기본 화면 구현

--- a/chatting/public/test.html
+++ b/chatting/public/test.html
@@ -54,9 +54,9 @@
 
         socket.emit('joinRoom', num, name);
 
-        // document.querySelector('select').addEventListener('change', () => {
-        //     socket.emit('')
-        // });
+        document.querySelector('select').addEventListener('change', () => {
+            socket.emit('')
+        });
 
 
 
