오픈채팅 / 엔터입력으로 채팅보내기, 스크롤 가장 아래(최근 메세지)보기, 글자입력안했을때 전송금지

--- a/chatting/public/open_chat.html
+++ b/chatting/public/open_chat.html
@@ -47,10 +47,10 @@
                 
             </ul>
         </div>
-        <div class="chat__input">
-            <input class="input__message" type="text">
-            <button class="input__send">전송</button>
-        </div>
+        <form class="chat__input" onsubmit="return false">
+            <input class="input__message" type="text" maxlength="50">
+            <input class="input__send" type="reset" value="전송">
+        </form>
     </div>
     <!-- 라이브러리 호출 -->
     <script src="/socket.io/socket.io.js"></script>
@@ -84,22 +84,45 @@
         sendMessage.addEventListener("click", () => {
             // 입력한 메세지 내용
             let message = document.querySelector(".input__message").value;
-            // 유저와 메세지내용이 담긴 객체를 서버로 전달한다
-            let sendMessageData = {
-            name : name,
-            message : message
-            }; 
-            socket.emit("send_message", sendMessageData);
+            // 내용을 입력하지 않고 전송버튼을 눌렀을때는 해당 이벤트를 취소
+            if (message.length > 0) {
+                // 유저와 메세지내용이 담긴 객체를 서버로 전달한다
+                let sendMessageData = {
+                name : name,
+                message : message
+                }; 
+                socket.emit("send_message", sendMessageData);
 
-            // 현 클라이언트에서 전달한 메세지는 서버로부터 전달받지 않고 바로 채팅창에 반영한다
-            // 다른 메세지들과 구분할 수 있도록 하기 위해서 ex([나] : message)
-            let messageTag = document.createElement("li");
-            let chatMessage = "[나] : " + message;
-            // css 적용 위한 class 부여
-            messageTag.classList.add("my-message");
-            // 채팅창에 메세지 반영
-            document.querySelector(".chat__messages").append(messageTag);
-            messageTag.append(chatMessage);
+                // 현 클라이언트에서 전달한 메세지는 서버로부터 전달받지 않고 바로 채팅창에 반영한다
+                // 다른 메세지들과 구분할 수 있도록 하기 위해서 ex([나] : message)
+                let messageTag = document.createElement("li");
+                let chatMessage = "[나] : " + message;
+                // css 적용 위한 class 부여
+                messageTag.classList.add("my-message");
+                // 채팅창에 메세지 반영
+                document.querySelector(".chat__messages").append(messageTag);
+                messageTag.append(chatMessage);
+                // 채팅창의 스크롤을 가장 아래로 이동(최근 메세지 보기)
+                let chatScroll = document.querySelector(".chat__scroll");
+                chatScroll.scrollTop = chatScroll.scrollHeight;
+            } else {
+                event.preventDefault();
+                event.stopPropagation();
+            }
+        });
+        // 입력창에서 엔터를 눌렀을때도 전송버튼을 클릭하도록 설정
+        let inputMessage = document.querySelector(".input__message");
+        inputMessage.addEventListener("keypress", () => {
+            let message = document.querySelector(".input__message").value;
+
+            if (window.event.keyCode == 13) {
+                if (message.length > 0) {
+                    sendMessage.click();
+                } else {
+                    event.preventDefault();
+                    event.stopPropagation();
+                }
+            }
         });
 
 
