오픈채팅 / 다른유저의 채팅 수신 시 스크롤 내리기(최근메세지)

--- a/chatting/public/open_chat.html
+++ b/chatting/public/open_chat.html
@@ -140,6 +140,9 @@
             // 채팅창에 메세지 반영
             document.querySelector(".chat__messages").append(messageTag);
             messageTag.append(chatMessage);
+            // 채팅창의 스크롤을 가장 아래로 이동(최근 메세지 보기)
+            let chatScroll = document.querySelector(".chat__scroll");
+            chatScroll.scrollTop = chatScroll.scrollHeight;
         });
     </script>
 </body>
