오픈채팅 / 나가기(연결 끊기) 테스트

--- a/chatting/public/open_chat.html
+++ b/chatting/public/open_chat.html
@@ -144,6 +144,12 @@
             let chatScroll = document.querySelector(".chat__scroll");
             chatScroll.scrollTop = chatScroll.scrollHeight;
         });
+
+
+        // // 연결 끊었을때 (채팅방 나가기)
+        // socket.on('disconnect', (name) => {
+        //     console.log("disconnected from server");
+        // });
     </script>
 </body>
 
